# markdown_editor

./: .gitignore  Cargo.toml  README.md  prompt.txt
.github/workflows/: release-macos.yml
src/: app.rs  color_picker.rs  config.rs  file_ops.rs  icons.rs  main.rs  markdown_view.rs  theme.rs  toolbar.rs
src/app/: vim.rs
