[package]
name = "md_editor"
version = "0.1.0"
edition = "2024"
description = "A simple Markdown editor with inline rendering, built with Iced"
license = "MIT"
rust-version = "1.88"

[package.metadata.bundle]
name = "md_editor"
identifier = "org.localdomain.md_editor"
category = "public.app-category.developer-tools"
short_description = "A simple Markdown editor with inline rendering, built with Iced"
# icon = ["assets/icon.icns"]  # optional; add an .icns for a Dock/Finder icon

[dependencies]
iced = { version = "0.14", features = ["markdown", "svg", "tokio"] }
# Used directly for our own (theme-correct, cached, windowed) syntax highlighting
# of code blocks and the active editor line. Depending on it directly — instead
# of via iced's `highlighter` feature — keeps iced's `markdown` parser from
# eagerly syntax-highlighting every code block during parsing (with a hardcoded
# theme we discard and re-highlight anyway), which made opening large documents
# block for hundreds of milliseconds.
iced_highlighter = "0.14"
rfd = { version = "0.17", default-features = false, features = ["gtk3"] }
tokio = { version = "1", features = ["fs"] }
webbrowser = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
